add: insertUser and usersList feature

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_PORT=3000
 APP_URL=http://localhost:3000
 
 # mongoDB
+# do not use this: MONGO_HOST=localhost
 MONGO_HOST=
 MONGO_DB=
 MONGO_USERNAME=
