add: newSession feature completely

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # app
 APP_PORT=3000
 APP_URL=http://localhost:3000
+APP_SECRET=b9531921fb1fd9ec3272a2fcca9d6ded0efdf586
 
 # mongoDB
 # do not use this: MONGO_HOST=localhost
